--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -262,8 +262,12 @@
         right: 1%;
         z-index: 200;
 
+        @include respond-flipPhone {
+          height: calc(100vh - 8rem);
+        }
+
         @include repond-phone {
-          height: calc(100vh - 9rem);
+          height: calc(100vh - 7.9rem);
         }
 
         &--chat {
